    (Closes: #766180)

  [ Jakub Wilk ]
  * sadt:
    + Fix handling of rw-build-tree restriction
    + Improve handling of non-executable test files.  When rw-build-tree is in
      effect, simply chmod the file.  Otherwise, attempt to chmod the file
      (skipping the test on failure) and restore the original permissions on
      completion.  (Closes: #749729)

 -- Paul Wise <pabs@debian.org>  Sun, 19 Oct 2014 17:27:24 +0800

devscripts (2.14.10) unstable; urgency=medium

  * Fix all the other calls to dpkg-architecture in devscripts.
    (Closes: #764963 ... again)

 -- James McCoy <jamessan@debian.org>  Mon, 13 Oct 2014 22:35:31 -0400

devscripts (2.14.9) unstable; urgency=medium

  * debuild: Only pass -a/-t to dpkg-architecture when the user has specified
    values for them.  (Closes: #764963)

 -- James McCoy <jamessan@debian.org>  Sun, 12 Oct 2014 21:32:05 -0400

devscripts (2.14.8) unstable; urgency=medium

  [ James McCoy ]
  * uscan:
    + Ensure $keyring is defined before trying to use it when checking whether
      the upstream keyring exists.
    + Strip the Referer header when using qa.debian.org's Sourceforge
      redirector.  When there's a foreign Referer header, Sourceforge responds
      with a web page containing a <meta refresh=...> redirect to the actual
      file, causing uscan to save the web page rather than the file.  (Closes:
      #764367)
  * uupdate: When updating a 1.0 source format package, remove any symlinks in
    the new upstream source before applying the Debian diff, restoring the
    symlinks after.  This prevents patch from following the symlinks, which
    may point to targets outside of the source tree, when applying the diff.
    Thanks to Jakub Wilk for the discovery and suggested fix.
    (Closes: #737160, CVE-2014-1833)

  [ Ron Lee ]
  * cowpoke: Add --sign and --upload command line overrides.

 -- James McCoy <jamessan@debian.org>  Sat, 11 Oct 2014 00:22:34 -0400

devscripts (2.14.7) unstable; urgency=low
